k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-demo
  template:
    metadata:
      labels:
        app: node-demo
    spec:
      containers:
      - name: node-demo
        image: kuber19/node-demo:latest
        ports:
        - containerPort: 3000
