k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    app: node-demo
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30007
